Feature/publish javadocs (#5)
* Bump software.amazon.awssdk:cleanrooms from 2.20.23 to 2.20.24 (#109)

Bumps software.amazon.awssdk:cleanrooms from 2.20.23 to 2.20.24.


[![Dependabot compatibility
score](https://dependabot-badges.githubapp.com/badges/compatibility_score?dependency-name=software.amazon.awssdk:cleanrooms&package-manager=gradle&previous-version=2.20.23&new-version=2.20.24)](https://docs.github.com/en/github/managing-security-vulnerabilities/about-dependabot-security-updates#about-compatibility-scores)

Dependabot will resolve any conflicts with this PR as long as you don't
alter it yourself. You can also trigger a rebase manually by commenting
`@dependabot rebase`.

[//]: # (dependabot-automerge-start)
[//]: # (dependabot-automerge-end)

---

<details>
<summary>Dependabot commands and options</summary>
<br />

You can trigger Dependabot actions by commenting on this PR:
- `@dependabot rebase` will rebase this PR
- `@dependabot recreate` will recreate this PR, overwriting any edits
that have been made to it
- `@dependabot merge` will merge this PR after your CI passes on it
- `@dependabot squash and merge` will squash and merge this PR after
your CI passes on it
- `@dependabot cancel merge` will cancel a previously requested merge
and block automerging
- `@dependabot reopen` will reopen this PR if it is closed
- `@dependabot close` will close this PR and stop Dependabot recreating
it. You can achieve the same result by closing it manually
- `@dependabot ignore this major version` will close this PR and stop
Dependabot creating any more for this major version (unless you reopen
the PR or upgrade to it yourself)
- `@dependabot ignore this minor version` will close this PR and stop
Dependabot creating any more for this minor version (unless you reopen
the PR or upgrade to it yourself)
- `@dependabot ignore this dependency` will close this PR and stop
Dependabot creating any more for this dependency (unless you reope

--- a/.github/workflows/javadocs.yml
+++ b/.github/workflows/javadocs.yml
@@ -8,9 +8,10 @@ on:
 
 # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
+  actions: read
   contents: read
-  pages: write
   id-token: write
+  pages: write
 
 # Allow one concurrent deployment (if a build is already in progress, cancel in favor of the latest Javadocs)
 concurrency:
@@ -27,12 +28,13 @@ jobs:
       - id: skip_check
         uses: fkirc/skip-duplicate-actions@v5.3.0
         with:
+          # If the Java sources, build files, configuration files or workflows have been updated, we should update the Javadocs.
           concurrent_skipping: 'same_content_newer'
-          paths: '["**/src/**", "**.gradle", "**/build.gradle"]'
+          paths: '["**/src/**", "**.gradle", "**/build.gradle", ".github/workflows/**"]'
   javadocs:
-    # Check for potentially new Javadocs
+    # Check for potentially new Javadocs and that we're on the correct repository
     needs: filter
-    if: ${{ needs.filter.outputs.should_skip != 'true' }}
+    if: ${{ needs.filter.outputs.should_skip != 'true' && github.repository == 'aws/c3r' }}
     # Set the URL to publish docs to (currently top-level GitHub Page for repo)
     environment:
       name: github-pages
